<resources>
    <string name="app_name">Expo Cultural aplha</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_pesquisa">Pesquisar</string>
    <string name="menu_obras">Obras</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Conquistas</string>

    <string name="Entrar">Entrar</string>
    <string name="cadastro">Cadastre uma conta</string>
    <string name="cadastro2">Cadastre-se</string>
    <string name="logo">logo</string>
</resources>